--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ input::placeholder {
   color: #bbb;
 }
 
-input:focus,
+input:focus:not([type="radio"]):not([type="checkbox"]),
 textarea:focus,
 select:focus {
   border-color: #006;
@@ -137,6 +137,12 @@ button {
   padding: 1rem;
   border: 0;
   border-radius: 0.25rem;
+}
+
+button:hover {
+  background-color: #3a9;
+  cursor: pointer;
+  transition: background-color 300ms ease-in-out;
 }
 
 footer {
